--- a/plantilla/css/footer.css
+++ b/plantilla/css/footer.css
@@ -1,34 +1,38 @@
 footer{
-    background: rgba(255,158,125,255);
-    width: 100%;
-    height: 120px;
-  }
-  
-  footer .contenedor{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 1%;
-  }
-  
+  background: rgb(20, 20, 20);
+  width: 100%;
+  height: 120px;
+  position: fixed;
+
+}
+
+footer .contenedor{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1%;
+  position: fixed;
+
+}
+
+.sociales{
+  width: 100%;
+  font-size: 28px;
+  margin: 10px;
+}
+
+.sociales a{
+  color: white;
+  text-decoration: none;
+}
+
+.copy{
+  font-size: 20px;
+  color: white;
+}
+
+@media (max-width:1024px){
   .sociales{
-    width: 100%;
-    font-size: 28px;
-    margin: 10px;
+    text-align: center;
   }
-  
-  .sociales a{
-    color: black;
-    text-decoration: none;
-  }
-  
-  .copy{
-    font-size: 20px;
-    color: black;
-  }
-  
-  @media (max-width:1024px){
-    .sociales{
-      text-align: center;
-    }
-  }
+}
